fix centered bug on mobile

--- a/src/css/blocks/page-main/_page-main.scss
+++ b/src/css/blocks/page-main/_page-main.scss
@@ -113,7 +113,6 @@
 		justify-content: center;
 		position: relative;
 		@media ($mobile) {
-			justify-content: flex-start;
 			align-items: flex-start;
 			padding-top: 110px;
 		}
